[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/actors/myoko.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/player.gd" type="Script" id=2]
[ext_resource path="res://src/actors/spring_arm.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.328175
height = 0.899992

[node name="Player" type="KinematicBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.779987, -0.00298238 )
shape = SubResource( 1 )

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.14615, 0 )
spring_length = 5.0
margin = 0.02
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="SpringArm"]
current = true

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )

[node name="Myoko" parent="." instance=ExtResource( 1 )]

[node name="NetworkTickRate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="MovementTween" type="Tween" parent="."]

[connection signal="timeout" from="NetworkTickRate" to="." method="_on_timeout"]
